--- a/lists/templates/lists/home.html
+++ b/lists/templates/lists/home.html
@@ -8,16 +8,19 @@
     <h1>You To-Do lists</h1>
     <form method="post">
         {% csrf_token %}
-        <input id="id_new_item" placeholder="Enter a to-do item" />
+        <input id="id_new_item" name="item_text" placeholder="Enter a to-do item" />
     </form>
 
 
     <table id="id_list_table" >
+        {% for item in items %}
+
         <tr>
             <td>
-                1:{{new_item_text}}
+                {{forloop.counter}}:{{item.text}}
             </td>
         </tr>
+        {% endfor %}
     </table>
 
 </body>
